# horse-dance

./: .gitignore  Makefile  README.md  pyproject.toml  shell.nix
src/horse_dance/: mime_resolver.py  mime_types.py  normalizer.py
tests/: test_mime_resolver.py  test_mime_types.py  test_normalizer.py
tests/consolidate_test/: reset
tests/consolidate_test/tree/: correct.avi
tests/file-examples/compressed-cases/: text-file.txt.bz2  text-file.txt.xz
tests/file-examples/extensionless/: pyrunme
tests/file-examples/ordinaries/: runme.bash
